# gadgets

./: README.md
c-cpp/: .gitignore
c-cpp/aes-encrypt/: Makefile  encfile.c
c-cpp/bellman-ford/: Makefile  README.md  bf.cpp  graph.cpp  graph.h  main.cpp
c-cpp/client/: Makefile  README.md  client.c
c-cpp/cmake-gtest/: CMakeLists.txt  README.md  factorial.cpp  factorial_test.cpp  main.cpp
c-cpp/factory-function/: .gitignore  Makefile  README.md  animal.cpp  ff.cpp  point.cpp
c-cpp/x-sudoku/: .gitignore  Makefile  README.md  sudoku.cpp
python/crawl-emoji/: README.md  crawl-emoji.py
python/take-a-break/: README.md  take-a-break.py
rust/: .gitignore  README.md
rust/csr-bfs/: Cargo.toml
rust/csr-bfs/examples/: repl.rs
rust/csr-bfs/src/: lib.rs
rust/lcs/: Cargo.toml
rust/lcs/examples/: input.rs  main.rs
rust/lcs/src/: lib.rs
rust/merge-sort/: Cargo.toml
rust/merge-sort/examples/: sort.rs
rust/merge-sort/src/: lib.rs  tests.rs
rust/miss-cann/: Cargo.toml  README.md
rust/miss-cann/src/: main.rs
rust/read-utf8/: .gitignore  Cargo.toml  README.md
rust/read-utf8/src/: main.rs
rust/sound/: .gitignore  Cargo.toml  README.md
rust/sound/src/: main.rs  note.rs
rust/work-assign/: Cargo.toml  README.md
rust/work-assign/examples/: assign.rs  input.rs
rust/work-assign/src/: lib.rs
